test: keep student import regression Java 17 compatible